<resources>
    <string name="app_name">FinanceAssistant</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="budget">Budget</string>
    <string name="calculator">Calculator</string>
    <string name="settings">Settings</string>
    <string name="kalkulator_walutowy">Kalkulator Walutowy</string>
    <string name="waluta">Waluta</string>
    <string name="ustawienia">Ustawienia</string>
    <string name="domyslna_waluta">Domyślna waluta</string>
    <string name="jezyk_aplikacji">Język aplikacji</string>
    <string name="polski">Polski</string>
    <string name="angielski">Angielski</string>
    <string name="przychody">Przychody</string>
    <string name="wydatki">Wydatki</string>
    <string name="bilans">Bilans</string>
    <string name="przelicz">Przelicz</string>
    <string name="add">Add</string>
    <string name="text_dane">Uzupełnij poniższe dane</string>
    <string name="kwota">Kwota</string>
    <string name="hint_word">Word…</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="add_word">Add word</string>
    <string name="data">Data</string>
    <string name="date">Date:</string>
    <string name="kategoria">Kategoria</string>
    <string name="category">Category:</string>
    <string name="zero">0.00</string>
    <string name="trzykropek">…</string>
    <string name="ok">OK</string>
    <string name="error">Błąd</string>
    <string name="error_message">Nie podano kwoty lub daty</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="filter">Filter</string>
    <string name="amount">Amount:</string>
    <string name="between">Between</string>
    <string name="and">And</string>
    <string name="food">Food</string>
    <string name="housing">Housing</string>
    <string name="fees_and_bills">Fees and bills</string>
    <string name="health">Health</string>
    <string name="hygiene_and_chemicals">Hygiene and chemicals</string>
    <string name="clothing">Clothing</string>
    <string name="relax">Relax</string>
    <string name="transport">Transport</string>
    <string name="other">Other</string>
    <string name="amount_between">Amount: between</string>
    <string name="dash">—</string>
</resources>